Fix mobile Home icon invisible when inactive in bottom nav
Agent-Logs-Url: https://github.com/MatthewSteeples/my-first-static-blazor-app/sessions/e3d3674f-ce31-45d1-a558-7d35b932479f

--- a/Client/Layout/NavMenu.razor.css
+++ b/Client/Layout/NavMenu.razor.css
@@ -166,8 +166,10 @@
     .bottom-nav ::deep .bottom-nav-item.active .bi-house-door-fill-nav-menu,
     .bottom-nav ::deep .bottom-nav-item:hover .bi-house-door-fill-nav-menu {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%231b6ec2' class='bi bi-house-door-fill' viewBox='0 0 16 16'%3E%3Cpath d='M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z'/%3E%3C/svg%3E");
+        filter: none;
     }
 
+    .bottom-nav ::deep .bottom-nav-item .bi-house-door-fill-nav-menu,
     .bottom-nav ::deep .bottom-nav-item .bi-grid-nav-menu,
     .bottom-nav ::deep .bottom-nav-item .bi-upload-nav-menu,
     .bottom-nav ::deep .bottom-nav-item .bi-gear-nav-menu,
